fix branch text too long problem
when broswe the long-name branch, the branch text will wrap to the second line.this request fix this problem.

--- a/src/octotree.less
+++ b/src/octotree.less
@@ -95,6 +95,11 @@
       font-size: 12px;
       margin-top: -6px;
       font-size: 11px;
+      width: 100%;
+      padding-right: 55px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .octotree_header_branch:before {
       font-family: octicons;
